Added actions filters
